<resources>
    <!-- Main -->
    <string name="app_name">Fight Keeper</string>
    <string name="LeftSide">Left</string>
    <string name="RightSide">Right</string>
    <!-- Fight -->
    <string name="BackDesc">Background Fight Image</string>
    <string name="FighterDesc">One of the fighter images</string>
    <string name="Health">%d/%d</string>
    <string name="MonsterName">Monster</string>
    <!-- Actions -->
    <string name="Attack">Attack</string>
    <string name="Damage">%d – %d</string>
    <string name="ActualDamage">&lt;b>%d&lt;/b></string>
    <string name="AttackIconDesc">Attack Action Icon</string>
    <string name="Defence">Defence</string>
    <string name="DefenceAmount">%d – %d</string>
    <string name="ActualDefence">&lt;b>%d&lt;/b></string>
    <string name="DefenceIconDesc">Defence Action Icon</string>
    <string name="Focus">Focus</string>
    <string name="FocusMultiplier">x%.2f</string>
    <string name="FocusIconDesc">Focus Action Icon</string>
    <string name="Heal">Heal</string>
    <string name="HealAmount">%d – %d</string>
    <string name="HealTurns">&lt;b>%d&lt;/b> turns</string>
    <string name="HealIconDesc">Heal Action Icon</string>
    <!-- New Game -->
    <string name="NewGame">New Game</string>
</resources>
