<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.fightkeeper.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/LeftHeal"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:padding="4dp">

            <ImageView
                android:id="@+id/LeftHealIcon"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/HealIconDesc"
                android:src="@drawable/icon_heal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/LeftHealIcon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/LeftHealText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/Heal" />


                <TextView
                    android:id="@+id/LeftHealValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingEnd="8dp"
                    android:paddingStart="12dp"
                    android:text="@string/HealAmount"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
